--- a/projects/collect/src/assets/i18n/bn-IN.json
+++ b/projects/collect/src/assets/i18n/bn-IN.json
@@ -33,6 +33,7 @@
     "forms.label.state": "রাজ্য / প্রদেশ",
     "forms.label.locality": "স্থানীয় এলাকা / জেলা",
     "forms.label.current_status": "এখনকার অবস্থা",
+    "forms.label.taken_test": "আপনি যদি একটি COVID-19 পরীক্ষা নিয়েছ?",
     "forms.label.health_conditions": "স্বাস্থ্যের অবস্থা",
     "forms.errors.required": "প্রয়োজনীয়",
     "forms.errors.age.valid": "বৈধ বয়স মনে হচ্ছে না",
@@ -42,11 +43,15 @@
     "forms.options.other": "অন্যান্য",
     "forms.options.yes": "হ্যাঁ",
     "forms.options.no": "না",
-    "forms.option.positive_mild": "আমি Covid -19 সঙ্গে চিহ্নিত করা হয়েছে এবং হালকা উপসর্গ",
-    "forms.option.positive_moderate": "আমি Covid -19 সঙ্গে চিহ্নিত করা হয়েছে এবং পরিমিতরূপে গুরুতর লক্ষণ আছে",
-    "forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
-    "forms.option.recovered_full": "আমি Covid -19 সঙ্গে চিহ্নিত করা হয় এবং সম্পূর্ণরূপে সেরে উঠেছে",
-    "forms.option.resp_illness_not_identified": "আমি অন্য পূর্ব বিদ্যমান শ্বাসযন্ত্রের অসুস্থতা আছে কিন্তু Covid -19 সঙ্গে চিহ্নিত করা হয় নি",
+    "forms.option.pos_test": "আমার শেষ পরীক্ষা পরিক্ষিত ইতিবাচক",
+    "forms.option.neg_test": "আমার শেষ পরীক্ষা পরিক্ষিত নেতিবাচক",
+    "forms.option.no_test": "কখনও একটি পরীক্ষা নেয়া",
+    "forms.option.positive_mild": "আমি হালকা উপসর্গ",
+    "forms.option.positive_moderate": "আমি পরিমিতরূপে গুরুতর লক্ষণ আছে",
+    "forms.option.positive_asymp": "আমি কোনো লক্ষণ (asymptomatic) থাকতে",
+    "forms.option.recovered_full": "আমি উপসর্গ ছিল এবং সম্পূর্ণরূপে সেরে উঠেছে",
+    "forms.option.recovered_neg_test": "আমি পূর্বে ইতিবাচক পরীক্ষিত ছিল, কিন্তু এখন নেতিবাচক পরীক্ষা আছে এবং সম্পূর্ণরূপে উদ্ধার",
+    "forms.option.resp_illness_not_identified": "আমি অন্য পূর্ব বিদ্যমান শ্বাসযন্ত্রের অসুস্থতা আছে",
     "forms.option.no_resp_illness_exposed": "আমি কোন শ্বাসযন্ত্রের অসুস্থতা আছে কিন্তু আমি যোগাযোগের মাধ্যমে ভাইরাস উন্মুক্ত করা হয়ে থাকতে পারে",
     "forms.option.healthy": "আমি কোনো শ্বাসযন্ত্রের অসুস্থতা না থাকে",
     "forms.option.none_of_the_above": "উপরের কেউই না",
@@ -54,13 +59,14 @@
     "forms.option.cough": "কাশি",
     "forms.option.fever": "জ্বর",
     "forms.option.pneumonia": "নিউমোনিয়া",
-    "forms.option.loss_of_smell": "গন্ধ কমানোর",
+    "forms.option.loss_of_smell": "গন্ধ ও স্বাদ ক্ষতি",
     "forms.option.smoker": "ধূমপায়ী",
     "forms.option.asthma": "এজমা",
     "forms.option.cld": "ক্রনিক ফুসফুসের রোগ",
     "forms.option.ht": "হাইপারটেনশন",
     "forms.option.ihd": "ইস্চেমিক হৃদরোগ",
     "forms.option.diabetes": "ডায়াবেটিস",
+    "forms.option.diarrhoea": "অতিসার",
     "record.message.info": "একটি শান্ত পরিবেশে নিশ্চিত করুন যে আপনি আছেন এবং আপনার মুখ থেকে 20 সেমি প্রায় আপনার ডিভাইস রাখা দয়া করে",
     "record.title.breathing-shallow": "শ্বাস-প্রশ্বাস (অগভীর)",
     "record.title.breathing-deep": "প্রশ্বাস (গভীর)",
