--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -33,6 +33,7 @@
 	"forms.label.state": "State/Province",
 	"forms.label.locality": "Locality/District",
 	"forms.label.current_status": "Current Status",
+	"forms.label.taken_test": "Have you taken a COVID-19 test?",
 	"forms.label.health_conditions": "Health Conditions",
 	"forms.errors.required": "Required",
 	"forms.errors.age.valid": "Doesn't look like valid age",
@@ -42,19 +43,23 @@
 	"forms.options.other": "Other",
 	"forms.options.yes": "Yes",
 	"forms.options.no": "No",
-	"forms.option.positive_mild": "I have been identified with Covid-19 and have mild symptoms",
-	"forms.option.positive_moderate": "I have been identified with Covid-19 and have moderately severe symptoms",
-	"forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
-	"forms.option.recovered_full": "I was identified with Covid-19 and have recovered fully",
-	"forms.option.resp_illness_not_identified": "I have other pre-existing respiratory illnesses but have not been identified with Covid-19",
-	"forms.option.no_resp_illness_exposed": "I have no respiratory illness but I may have been exposed to the virus through contact",
-	"forms.option.healthy": "I do not have any respiratory illnesses",
+	"forms.option.pos_test": "Tested positive in my last test",
+	"forms.option.neg_test": "Tested negative in my last test",
+	"forms.option.no_test" : "Never taken a test",
+	"forms.option.positive_mild": "Mild symptoms",
+	"forms.option.positive_moderate": "Moderately severe symptoms",
+	"forms.option.positive_asymp": "No symptoms (asymptomatic)",
+	"forms.option.recovered_full": "Had symptoms and have recovered fully",
+	"forms.option.recovered_neg_test": "Had previously tested positive, but have tested negative now and recovered fully",
+	"forms.option.resp_illness_not_identified": "Have other pre-existing respiratory illnesses",
+	"forms.option.no_resp_illness_exposed": "Have no respiratory illness but I may have been exposed to the virus through contact",
+	"forms.option.healthy": "Do not have any respiratory illnesses",
 	"forms.option.none_of_the_above": "None of the above",
 	"forms.option.cold": "Cold",
 	"forms.option.cough": "Cough",
 	"forms.option.fever": "Fever",
 	"forms.option.pneumonia": "Pneumonia",
-	"forms.option.loss_of_smell": "Loss of Smell",
+	"forms.option.loss_of_smell": "Loss of Smell & Taste",
 	"forms.option.smoker": "Smoker",
 	"forms.option.asthma": "Asthma",
 	"forms.option.cld": "Chronic Lung Disease",
@@ -63,6 +68,7 @@
 	"forms.option.mp" : "Muscle Pain",
 	"forms.option.ftg" : "Fatigue",
 	"forms.option.diabetes": "Diabetes",
+	"forms.option.diarrhoea": "Diarrhoea",
 	"record.message.info": "Please make sure you are in a quiet environment and keep your device around 20 cm from your face",
 	"record.title.breathing-shallow": "Breathing(shallow)",
 	"record.title.breathing-deep": "Breathing (deep)",
