--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -33,6 +33,7 @@
 	"forms.label.state": "राज्य / प्रांत",
 	"forms.label.locality": "क्षेत्र  / जिला",
 	"forms.label.current_status": "वर्तमान स्थिति",
+	"forms.label.taken_test": "यदि आप एक COVID -19 परीक्षण उठाया है?",
 	"forms.label.health_conditions": "स्वास्थ्य की स्थिति",
 	"forms.errors.required": "अपेक्षित",
 	"forms.errors.age.valid": "वैध उम्र की तरह नहीं दिखता",
@@ -42,25 +43,30 @@
 	"forms.options.other": "अन्य",
 	"forms.options.yes": "हाँ",
 	"forms.options.no": "नहीं",
-	"forms.option.positive_mild": "मुझे Covid -19 से संक्रमण हुआ है और हल्के लक्षण है",
-	"forms.option.positive_moderate": "मुझे Covid -19 से संक्रमण हुआ है और मध्यम-गंभीर लक्षण है",
-	"forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
-	"forms.option.recovered_full": "मुझे Covid -19 से संक्रमण हुआ था और अब पूरी तरह से ठीक हूँ",
-	"forms.option.resp_illness_not_identified": "मुझे पहले से मौजूदा सांस की बीमारी है लेकिन Covid -19 के साथ संक्रमण नहीं हुआ",
-	"forms.option.no_resp_illness_exposed": "मुझे कोई सांस की बीमारी नहीं है, लेकिन मुझे अन्य लोगों से संपर्क के माध्यम से वायरस संक्रमण हो सकता है",
-	"forms.option.healthy": "मुझे कोई भी सांस की बीमारी नहीं है",
+	"forms.option.pos_test": "मेरा आखिरी परीक्षा में परीक्षण किया गया सकारात्मक",
+	"forms.option.neg_test": "मेरा आखिरी परीक्षा में परीक्षण किया गया नकारात्मक",
+	"forms.option.no_test": "कभी टेस्ट नहीं लिया",
+	"forms.option.positive_mild": "हल्के लक्षण",
+	"forms.option.positive_moderate": "मध्यम रूप से गंभीर लक्षण",
+	"forms.option.positive_asymp": "कोई लक्षण नहीं है (स्पर्शोन्मुख)",
+	"forms.option.recovered_full": "लक्षण था और पूरी तरह से ठीक है",
+	"forms.option.recovered_neg_test": "पहले से सकारात्मक का परीक्षण किया था, लेकिन अब नकारात्मक परीक्षण किया है और पूरी तरह से ठीक",
+	"forms.option.resp_illness_not_identified": "अन्य पूर्व मौजूदा सांस की बीमारी है",
+	"forms.option.no_resp_illness_exposed": "कोई सांस की बीमारी है, लेकिन मैं संपर्क के माध्यम से वायरस के संपर्क में किया गया हो सकता",
+	"forms.option.healthy": "कोई सांस की बीमारियांनहीं है",
 	"forms.option.none_of_the_above": "इनमे से कोई भी नहीं",
 	"forms.option.cold": "सर्दी",
 	"forms.option.cough": "खांसी",
 	"forms.option.fever": "बुखार",
 	"forms.option.pneumonia": "न्यूमोनिया",
-	"forms.option.loss_of_smell": "सूंघने की शक्ति में कमी ",
+	"forms.option.loss_of_smell": "सूंघने और स्वाद की शक्ति में कमी ",
 	"forms.option.smoker": "धूम्रपान करने वाले ",
 	"forms.option.asthma": "दमा",
 	"forms.option.cld": "जीर्ण फेफड़ों के रोग",
 	"forms.option.ht": "उच्च रक्तचाप",
 	"forms.option.ihd": "इस्केमिक दिल का रोग",
 	"forms.option.diabetes": "मधुमेह",
+	"forms.option.diarrhoea": "दस्त",
 	"record.message.info": "सुनिश्चित करें कि आप एक शांत वातावरण में रिकॉर्डिंग कर रहे हैं और अपने चेहरे से 20 सेमी के आसपास डिवाइस रखें",
 	"record.title.breathing-shallow": "साँस (हल्की )",
 	"record.title.breathing-deep": "साँस (गहरी)",
