--- a/projects/collect/src/assets/i18n/ka-IN.json
+++ b/projects/collect/src/assets/i18n/ka-IN.json
@@ -33,6 +33,7 @@
   "forms.label.state": "ರಾಜ್ಯ",
   "forms.label.locality": "ಜಿಲ್ಲೆ",
   "forms.label.current_status": "ಪ್ರಸ್ತುತ ಸ್ಥಿತಿ",
+  "forms.label.taken_test": "ನೀವು COVID -19 ಪರೀಕ್ಷೆ ತೆಗೆದುಕೊಂಡ?",
   "forms.label.health_conditions": "ಆರೋಗ್ಯದ ಸ್ಥಿತಿ",
   "forms.errors.required": "ಅವಶ್ಯ",
   "forms.errors.age.valid": "ವಯಸ್ಸು ತಪ್ಪಾಗಿರುವಂತಿದೆ",
@@ -42,25 +43,30 @@
   "forms.options.other": "ಇತರೆ",
   "forms.options.yes": "ಹೌದು",
   "forms.options.no": "ಇಲ್ಲ",
-  "forms.option.positive_mild": "ನಾನು Covid-19 ಸೋಂಕಿತ ಎಂದು ಗುರುತಿಸಲಾಗಿದೆ, ಹಾಗೂ ಮಂದರವಾದ (Mild) ರೋಗಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿರುವೆ.",
-  "forms.option.positive_moderate": "ನಾನು Covid-19 ಸೋಂಕಿತ ಎಂದು ಗುರುತಿಸಲಾಗಿದೆ, ಹಾಗೂ ಮಧ್ಯಮ ತೀವ್ರತೆಯ ರೋಗಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿರುವೆ.",
-  "forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
-  "forms.option.recovered_full": "ನಾನು Covid-19 ಸೋಂಕಿತ ಎಂದು ಗುರುತಿಸಲಾಗಿತ್ತು, ಈಗ ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡಿದ್ದೇನೆ.",
-  "forms.option.resp_illness_not_identified": "ನನಗೆ ಇತರೆ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ತೊಂದರೆ ಇದೆ, ಆದರೆ Covid-19 ಜೊತೆ ಗುರುತಿಸಲಾಗಿಲ್ಲ",
-  "forms.option.no_resp_illness_exposed": "ನಾನು ಯಾವುದೇ ಉಸಿರಾಟದ ತೊಂದರೆಯನ್ನು ಹೊಂದಿಲ್ಲ, ಆದರೆ ಸಂಪರ್ಕದ ಮೂಲಕ Covid-19 ವೈರಾಣು ಶಂಕಿತನಾಗಿರಬಹುದು.",
-  "forms.option.healthy": "ನಾನು ಯಾವುದೇ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳನ್ನು ಹೊಂದಿಲ್ಲ",
+  "forms.option.pos_test": "ನನ್ನ ಕೊನೆಯ ಪರೀಕ್ಷೆಯಲ್ಲಿ ಪರೀಕ್ಷಿಸಲ್ಪಟ್ಟಿದೆ ಸಕಾರಾತ್ಮಕ",
+  "forms.option.neg_test": "ನನ್ನ ಕೊನೆಯ ಪರೀಕ್ಷೆಯಲ್ಲಿ ಪರೀಕ್ಷಿಸಲ್ಪಟ್ಟಿದೆ ಋಣಾತ್ಮಕ",
+  "forms.option.no_test": "ಪರೀಕ್ಷಾ ತೆಗೆದುಕೊಳ್ಳುವಂತೆ",
+  "forms.option.positive_mild": "ಸೌಮ್ಯ ರೋಗಲಕ್ಷಣಗಳನ್ನು",
+  "forms.option.positive_moderate": "ಮಧ್ಯಮ ಗಂಭೀರ ಲಕ್ಷಣಗಳು",
+  "forms.option.positive_asymp": "ಯಾವುದೇ ಲಕ್ಷಣಗಳು (ಲಕ್ಷಣಗಳಿಲ್ಲದ)",
+  "forms.option.recovered_full": "ಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿತ್ತು ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡ",
+  "forms.option.recovered_neg_test": "ಹ್ಯಾಡ್ ಹಿಂದೆ ಧನಾತ್ಮಕ ಪರೀಕ್ಷಿಸಲಾಯಿತು, ಆದರೆ ಈಗ ಋಣಾತ್ಮಕ ಪರೀಕ್ಷಿಸಿದ್ದಾರೆ ಮತ್ತು ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡ",
+  "forms.option.resp_illness_not_identified": "ಇತರ ಪೂರ್ವ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಹ್ಯಾವ್",
+  "forms.option.no_resp_illness_exposed": "ಯಾವುದೇ ಉಸಿರಾಟದ ತೊಂದರೆಯನ್ನು ಹ್ಯಾವ್ ಆದರೆ ನಾನು ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಾಣುವಿನ ಗೆ ಬಹಿರಂಗಗೊಂಡವು ಮಾಡಬಹುದು",
+  "forms.option.healthy": "ಯಾವುದೇ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಹೊಂದಿಲ್ಲವೇ",
   "forms.option.none_of_the_above": "ಮೇಲಿನ ಯಾವುದೂ ಅಲ್ಲ",
   "forms.option.cold": "ಶೀತ",
   "forms.option.cough": "ಕೆಮ್ಮು",
   "forms.option.fever": "ಜ್ವರ",
   "forms.option.pneumonia": "ನ್ಯುಮೋನಿಯಾ",
-  "forms.option.loss_of_smell": "ವಾಸನೆ ನಷ್ಟ",
+  "forms.option.loss_of_smell": "ಸ್ಮೆಲ್ & ಟೇಸ್ಟ್ ನಷ್ಟ",
   "forms.option.smoker": "ಧೂಮಪಾನಿ",
   "forms.option.asthma": "ಉಬ್ಬಸ (ಆಸ್ತ್ಮ) ",
   "forms.option.cld": "ದೀರ್ಘಕಾಲದ ಶ್ವಾಸಕೋಶದ ಕಾಯಿಲೆ",
   "forms.option.ht": "ಅಧಿಕ ರಕ್ತದೊತ್ತಡ (ಬಿ.ಪಿ)",
   "forms.option.ihd": "ರಕ್ತಕೊರತೆಯ ಹೃದಯ ರೋಗ",
   "forms.option.diabetes": "ಮಧುಮೇಹ",
+  "forms.option.diarrhoea": "ಅತಿಸಾರ",
   "record.message.info": "ದಯವಿಟ್ಟು ನಿಶ್ಶಬ್ದ ಪರಿಸರದಲ್ಲಿ ಇದ್ದೀರೆಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ ಮತ್ತು ನಿಮ್ಮ ಸಾಧನವನ್ನು  ನಿಮ್ಮ ಮುಖದ 20 ಸೆಂಟಿಮೀಟರ್ ದೂರದಲ್ಲಿ ಇಟ್ಟುಕೊಳ್ಳಿ.",
   "record.title.breathing-shallow": "ಉಸಿರಾಟ (ವೇಗವಾಗಿ)",
   "record.title.breathing-deep": "ಉಸಿರಾಟ (ಆಳವಾಗಿ)",
