--- a/projects/collect/src/assets/i18n/ml-IN.json
+++ b/projects/collect/src/assets/i18n/ml-IN.json
@@ -33,6 +33,7 @@
  "forms.label.state": "സംസ്ഥാനം / പ്രവിശ്യ",
  "forms.label.locality": "പ്രദേശം / ജില്ല",
  "forms.label.current_status": "ഇപ്പോഴത്തെ അവസ്ഥ",
+ "forms.label.taken_test": "നിങ്ങൾ ഒരു ചൊവിദ്-19 ടെസ്റ്റ് വാങ്ങിയിട്ടുണ്ടോ?",
  "forms.label.health_conditions": "ആരോഗ്യ അവസ്ഥകൾ",
  "forms.errors.required": "ആവശ്യമായ",
  "forms.errors.age.valid": "സാധുവായ വയസ്സിൽ തോന്നുന്നില്ല",
@@ -42,25 +43,30 @@
  "forms.options.other": "മറ്റു",
  "forms.options.yes": "സമ്മതം",
  "forms.options.no": "ഇല്ല",
- "forms.option.positive_mild": "ഞാൻ ചൊവിദ്-19 താദാത്മ്യം രൂക്ഷമല്ലാത്ത ലക്ഷണങ്ങളില്ലെങ്കിലും ചെയ്തു",
- "forms.option.positive_moderate": "ഞാൻ ചൊവിദ്-19 താദാത്മ്യം കുറവ് കടുത്ത ലക്ഷണങ്ങളില്ലെങ്കിലും ചെയ്തു",
- "forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
- "forms.option.recovered_full": "ഞാൻ ചൊവിദ്-19 താദാത്മ്യം പൂർണ്ണമായി കണ്ടെടുത്തതായി ചെയ്തു",
- "forms.option.resp_illness_not_identified": "ഞാൻ മറ്റ് പ്രീ-നിലവിലുള്ള ശ്വാസകോശ രോഗങ്ങൾ ഉണ്ട് എന്നാൽ ചൊവിദ്-19 താദാത്മ്യം ചെയ്യാത്ത",
- "forms.option.no_resp_illness_exposed": "ഞാൻ ശ്വാസകോശ രോഗം എങ്കില് സമ്പർക്കത്തിലൂടെയാണ് വൈറസ് പ്രിഫർ ചെയ്തിരിക്കാം",
- "forms.option.healthy": "ഞാൻ എന്തെങ്കിലും ശ്വാസകോശ രോഗങ്ങൾ ഇല്ല",
+ "forms.option.pos_test": "എന്റെ അവസാന ടെസ്റ്റിൽ പരീക്ഷിച്ചു നല്ല",
+ "forms.option.neg_test": "എന്റെ അവസാന ടെസ്റ്റിൽ പരീക്ഷിച്ചു നെഗറ്റീവ്",
+ "forms.option.no_test": "ഒരു ടെസ്റ്റ് എടുത്ത ഒരിക്കലും",
+ "forms.option.positive_mild": "നേരിയ മോശം ലക്ഷണങ്ങൾ",
+ "forms.option.positive_moderate": "മോശമല്ലാത്ത കടുത്ത ലക്ഷണങ്ങൾ",
+ "forms.option.positive_asymp": "ഇല്ല ലക്ഷണങ്ങൾ (അസ്യ്ംപ്തൊമതിച്)",
+ "forms.option.recovered_full": "ലക്ഷണങ്ങൾ ഉണ്ടായിരുന്നു പൂർണ്ണമായി കണ്ടെടുത്തു",
+ "forms.option.recovered_neg_test": "മുമ്പ് പരീക്ഷിച്ചു നല്ല; ഇപ്പോഴോ നെഗറ്റീവ് പരീക്ഷിച്ചു പൂർണ്ണമായും കണ്ടെടുത്തു",
+ "forms.option.resp_illness_not_identified": "മറ്റ് പ്രീ-നിലവിലുള്ള ശ്വാസകോശ രോഗങ്ങൾ ഉണ്ടോ",
+ "forms.option.no_resp_illness_exposed": "യാതൊരു ശ്വാസകോശ രോഗം ഉണ്ടോ ഞാൻ സമ്പർക്കത്തിലൂടെയാണ് വൈറസ് പ്രിഫർ ചെയ്തിരിക്കാം",
+ "forms.option.healthy": "ഏതെങ്കിലും ശ്വാസകോശ രോഗങ്ങൾ ഇല്ല",
  "forms.option.none_of_the_above": "മുകളിൽ കൊടുത്തിരിക്കുന്നതിൽ ഒന്നുമല്ല",
  "forms.option.cold": "തണുത്ത",
  "forms.option.cough": "ചുമ",
  "forms.option.fever": "പനി",
  "forms.option.pneumonia": "ന്യുമോണിയ",
- "forms.option.loss_of_smell": "മണക്കുക നഷ്ടപ്പെടുന്നത്",
+ "forms.option.loss_of_smell": "മണക്കുക & ആസ്വദിച്ച് നഷ്ടപ്പെടുന്നത്",
  "forms.option.smoker": "വലിക്കും",
  "forms.option.asthma": "ആത്സ്മ",
  "forms.option.cld": "വിട്ടുമാറാത്ത ലങ് രോഗം",
  "forms.option.ht": "രക്തസമ്മർദ്ദവും",
  "forms.option.ihd": "ലേയ്ക്ക് രോഗം",
  "forms.option.diabetes": "പ്രമേഹ",
+ "forms.option.diarrhoea": "അതിസാരം",
  "record.message.info": "നിങ്ങളുടെ മുഖം നിന്ന് 20 സെ.മീ ചുറ്റും നിങ്ങളുടെ ഉപകരണം ഉറപ്പാക്കുക, സ്വസ്ഥമായ, ഒരു അന്തരീക്ഷത്തിൽ ഉറപ്പുവരുത്തുക ദയവായി",
  "record.title.breathing-shallow": "ശ്വസനം (ആഴം)",
  "record.title.breathing-deep": "ശ്വസനം (ആഴി)",
