--- a/projects/collect/src/assets/i18n/ta-IN.json
+++ b/projects/collect/src/assets/i18n/ta-IN.json
@@ -33,6 +33,7 @@
  "forms.label.state": "மாநிலம் / மாகாணம்",
  "forms.label.locality": "இருப்பிடம் / மாவட்டம்",
  "forms.label.current_status": "தற்போதைய நிலை",
+ "forms.label.taken_test": "நீங்கள் COVID 19 சோதனை மேற்கொண்டீர்களா?",
  "forms.label.health_conditions": "உடல் நிலை",
  "forms.errors.required": "தேவையான",
  "forms.errors.age.valid": "சரியான வயது போல இல்லை",
@@ -42,11 +43,15 @@
  "forms.options.other": "மற்ற",
  "forms.options.yes": "ஆம்",
  "forms.options.no": "இல்லை",
- "forms.option.positive_mild": "எனக்கு Covid 19 வந்துள்ளதாக அறிவிக்கப்பட்டுள்ளது மற்றும் லேசான அறிகுறிகள் தென்படுகின்றன",
- "forms.option.positive_moderate": "எனக்கு Covid 19 வந்துள்ளதாக அறிவிக்கப்பட்டுள்ளது மற்றும் மிதமான கடுமையான அறிகுறிகள் தென்படுகின்றன",
- "forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
- "forms.option.recovered_full": "எனக்கு Covid 19 வந்துள்ளதாக அறிவிக்கப்பட்டுள்ளது பின் முழுமையாக குணமடைந்து விட்டேன்",
- "forms.option.resp_illness_not_identified": "எனக்கு  முன்பே மற்ற சுவாச நோய்கள் உள்ளன, ஆனால் Covid 19 இதுவரை கண்டறியப்படவில்லை",
+ "forms.option.pos_test": "என் கடந்த சோதனை சோதிக்கப்பட்டது நேர்மறை",
+ "forms.option.neg_test": "என் கடந்த சோதனை சோதிக்கப்பட்டது எதிர்மறை",
+ "forms.option.no_test": "ஒருபோதும் சோதனை எடுத்ததில்லை",
+ "forms.option.positive_mild": "லேசான அறிகுறிகள் தென்படுகின்றன",
+ "forms.option.positive_moderate": "மிதமான மற்றும் கடுமையான அறிகுறிகள் தென்படுகின்றன",
+ "forms.option.positive_asymp": "எந்த அறிகுறிகளும் இல்லை (அறிகுறியில்லை)",
+ "forms.option.recovered_full": "அறிகுறிகள் இருந்தது. பின் முழுமையாக குணமடைந்து விட்டேன்",
+ "forms.option.recovered_neg_test": "முன்பு சோதனையில் நேர்மறை, ஆனால் இப்போது சோதனையில் எதிர்மறை. முழுமையாக குணமடைந்து விட்டேன்",
+ "forms.option.resp_illness_not_identified": "முன்பே வேறு சுவாச நோய்கள் உள்ளன",
  "forms.option.no_resp_illness_exposed": "எனக்கு எந்த சுவாச நோயும் இல்லை, ஆனால் நான் தொடர்பு மூலம் வைரஸ் தாக்கப்பட்டு இருக்கலாம்",
  "forms.option.healthy": "எனக்கு எந்த சுவாச நோய்கள் இல்லை",
  "forms.option.none_of_the_above": "மேலே குறிப்பிட்டவை எதுவுமில்லை",
@@ -54,13 +59,14 @@
  "forms.option.cough": "இருமல்",
  "forms.option.fever": "காய்ச்சல்",
  "forms.option.pneumonia": "நிமோனியா",
- "forms.option.loss_of_smell": "வாசனைத்திறன் இழப்பு",
+ "forms.option.loss_of_smell": "வாசனைத்திறன் மற்றும் ருசி இழப்பு",
  "forms.option.smoker": "புகைப்பிடிப்பவர்",
  "forms.option.asthma": "ஆஸ்துமா",
  "forms.option.cld": "நாள்பட்ட நுரையீரல் நோய்",
  "forms.option.ht": "உயர் இரத்த அழுத்தம்",
  "forms.option.ihd": "ஓட்டத்தடை இதய நோய்",
  "forms.option.diabetes": "நீரிழிவு நோய்",
+ "forms.option.diarrhoea": "வயிற்றுப்போக்கு",
  "record.message.info": "ஒரு அமைதியான சூழலில் இருந்துகொண்டு உங்கள் முகத்தில் இருந்து 20 செ.மீ. தள்ளி உங்கள் சாதனம் வைத்து கொள்ளவும்",
  "record.title.breathing-shallow": "சுவாசித்தல் (லேசாக)",
  "record.title.breathing-deep": "சுவாசித்தல் (ஆழ்ந்த)",
