--- a/projects/collect/src/assets/i18n/te-IN.json
+++ b/projects/collect/src/assets/i18n/te-IN.json
@@ -25,6 +25,7 @@
     "forms.label.state": "రాష్ట్రం / ప్రావిన్స్",
     "forms.label.locality": "ప్రాంతం / జిల్లా",
     "forms.label.current_status": "ప్రస్తుత స్థితి",
+    "forms.label.taken_test": "మీరు ఒక COVID -19 పరీక్ష చేశానా?",
     "forms.label.health_conditions": "ఆరోగ్య పరిస్థితులు",
     "forms.errors.required": "తప్పనిసరి",
     "forms.errors.age.valid": "చెల్లుబాటు అయ్యే వయస్సు లాగా అనిపించడం లేదు",
@@ -34,25 +35,30 @@
     "forms.options.other": "ఇతర",
     "forms.options.yes": "అవును",
     "forms.options.no": "కాదు",
-    "forms.option.positive_mild": "నాకు కోవిద్-19 నిర్ధారణ అయినది మరియు స్వల్ప లక్షణాలు కలిగి ఉన్నాను",
-    "forms.option.positive_moderate": "నాకు కోవిద్-19 నిర్ధారణ అయినది మరియు పరిమితంగా తీవ్రమైన లక్షణాలు కలిగి ఉన్నాను",
-    "forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
-    "forms.option.recovered_full": "నాకు కోవిద్-19 నిర్ధారణ అయినది మరియు నేను  కోవిద్-19 నుంచి పూర్తిగా కోలుకున్నాను ",
-    "forms.option.resp_illness_not_identified": "నాకు శ్వాస కోశ సంబంధిత వ్యాధి ఉంది, కానీ కోవిద్-19 నిర్ధారణ కాలేదు",
-    "forms.option.no_resp_illness_exposed": "నాకు ఏవిధమైన శ్వాస కోశ సంబంధిత వ్యాధులు లేవు, కానీ పరిచయస్తుల ద్వారా వైరస్ కి గురై ఉండవచ్చు",
-    "forms.option.healthy": "నాకు ఏవిధమైన శ్వాస కోశ సంబంధిత వ్యాధులు లేవు",
+    "forms.option.pos_test": "నా గత పరీక్షలో పరీక్షించబడింది సానుకూల",
+    "forms.option.neg_test": "నా గత పరీక్షలో పరీక్షించబడింది ప్రతికూల",
+    "forms.option.no_test": "ఒక పరీక్ష తీసుకున్న ఎప్పుడూ",
+    "forms.option.positive_mild": "స్వల్ప లక్షణాలను",
+    "forms.option.positive_moderate": "పరిమితంగా కలిగే తీవ్రమైన లక్షణాలు",
+    "forms.option.positive_asymp": "లక్షణాలు (కన్పించడం) తోబుట్టువుల",
+    "forms.option.recovered_full": "లక్షణాలు కలిగి మరియు పూర్తిగా కోలుకున్న",
+    "forms.option.recovered_neg_test": "గతంలో ధృవపడింది వచ్చింది, కానీ ఇప్పుడు ప్రతికూల పరీక్షించి మరియు పూర్తిగా కోలుకోలేదు",
+    "forms.option.resp_illness_not_identified": "ఇతర పూర్వ ఇప్పటికే శ్వాస రోగాలతో",
+    "forms.option.no_resp_illness_exposed": "ఏ శ్వాస అనారోగ్యం కలిగి కానీ నేను పరిచయం ద్వారా వైరస్ గురైనట్లు ఉండవచ్చు",
+    "forms.option.healthy": "ఏ శ్వాస అనారోగ్యం ఉందా",
     "forms.option.none_of_the_above": "పైవేవీ కావు",
     "forms.option.cold": "జలుబు",
     "forms.option.cough": "దగ్గు",
     "forms.option.fever": "జ్వరం",
     "forms.option.pneumonia": "న్యుమోనియా",
-    "forms.option.loss_of_smell": "వాసన కోల్పోవడం",
+    "forms.option.loss_of_smell": "స్మెల్ & టేస్ట్ నష్టం",
     "forms.option.smoker": "ధూమపానం",
     "forms.option.asthma": "ఆస్తమా (దమ్ము)",
     "forms.option.cld": "దీర్ఘకాల ఊపిరితిత్తుల వ్యాధి",
     "forms.option.ht": "రక్తపోటు",
     "forms.option.ihd": "గుండె సంబంధిత జబ్బులు",
     "forms.option.diabetes": "మధుమేహం",
+    "forms.option.diarrhoea": "విరేచనాలు",
     "record.message.info": "దయచేసి నిశ్శబ్ద వాతావరణం లో రికార్డింగ్ చేయండి  మరియు రికార్డింగ్ పరికరానికి ముఖానికి మధ్య కనీసం 20 సెంటీమీటర్ల దూరం ఉండేలా చూడండి",
     "record.title.breathing-shallow": "శ్వాస (నిస్సార)",
     "record.title.breathing-deep": "శ్వాస (లోతుగా)",
