--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -33,6 +33,7 @@
     "forms.label.state": "राज्य / प्रांत",
     "forms.label.locality": "नगर / जिल्हा",
     "forms.label.current_status": "वर्तमान स्थिती",
+    "forms.label.taken_test": "आपण COVID-19 परीक्षा घेतली आहे का?",
     "forms.label.health_conditions": "आरोग्य स्थिती",
     "forms.errors.required": "आवश्यक",
     "forms.errors.age.valid": "वैध वय दिसत नाही",
@@ -42,25 +43,30 @@
     "forms.options.other": "इतर",
     "forms.options.yes": "होय",
     "forms.options.no": "नाही",
-    "forms.option.positive_mild": "मी Covid-19 ओळखले आणि सौम्य लक्षणे आले आहेत",
-    "forms.option.positive_moderate": "मी Covid-19 ओळखले आणि माफक प्रमाणात गंभीर लक्षणे आले आहेत",
-    "forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
-    "forms.option.recovered_full": "मी Covid-19 ओळखला गेला होता आणि पूर्णपणे बरा आहे",
-    "forms.option.resp_illness_not_identified": "मी इतर पूर्व-विद्यमान श्वसन आजार आहे पण Covid-19 सह ओळखले गेलो नाही",
-    "forms.option.no_resp_illness_exposed": "मी श्वसन आजार आहे पण मी संपर्क व्हायरस उघड केले गेलो असावे",
-    "forms.option.healthy": "मी कोणत्याही श्वसन आजार नाही",
+    "forms.option.pos_test": "माझ्या शेवटच्या कसोटी चाचणी सकारात्मक",
+    "forms.option.neg_test": "माझ्या शेवटच्या कसोटी चाचणी नकारात्मक",
+    "forms.option.no_test": "एक चाचणी घेतली कधीही",
+    "forms.option.positive_mild": "सौम्य लक्षणे",
+    "forms.option.positive_moderate": "माफक प्रमाणात तीव्र लक्षणे",
+    "forms.option.positive_asymp": "कोणतीही लक्षणे (लक्षणे नसलेला)",
+    "forms.option.recovered_full": "लक्षणे होती आणि पूर्णपणे तंदुरुस्त आहे",
+    "forms.option.recovered_neg_test": "होते पूर्वी सकारात्मक चाचणी, पण आता नकारात्मक चाचणी केली आहे आणि पूर्णपणे तंदुरुस्त",
+    "forms.option.resp_illness_not_identified": "इतर पूर्व-विद्यमान श्वसन आजार आहे",
+    "forms.option.no_resp_illness_exposed": "नाही श्वसन आजार आहे पण मी संपर्क व्हायरस उघड केले गेले असावे",
+    "forms.option.healthy": "कोणत्याही श्वसन आजार नाही",
     "forms.option.none_of_the_above": "वरीलपैकी काहीही नाही",
     "forms.option.cold": "सर्दी",
     "forms.option.cough": "खोकला",
     "forms.option.fever": "ताप",
     "forms.option.pneumonia": "न्यूमोनिया",
-    "forms.option.loss_of_smell": "वास कमी होणे",
+    "forms.option.loss_of_smell": "वास आणि चव नष्ट होणे",
     "forms.option.smoker": "धूम्रपान",
     "forms.option.asthma": "दमा",
     "forms.option.cld": "तीव्र फुफ्फुसाचा रोग",
     "forms.option.ht": "उच्च रक्तदाब",
     "forms.option.ihd": "Ischemic हृदयरोग",
     "forms.option.diabetes": "मधुमेह",
+    "forms.option.diarrhoea": "अतिसार",
     "record.message.info": "एक शांत वातावरणात आपण आहेत याची खात्री करा आणि आपला चेहरा पासून 20 सें.मी. सुमारे आपले डिव्हाइस ठेवा",
     "record.title.breathing-shallow": "श्वास (उथळ)",
     "record.title.breathing-deep": "श्वास (खोल)",
