Edited team page

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -35,12 +35,12 @@
 	"name.sriram": "Dr. Sriram Ganapathy",
 	"name.pkg": "Dr. Prasanta Kumar Ghosh",
 	"name.anand": "Anand Mohan",
-	"name.anuroop": "Anuroop Iyengar",
+	"name.ananya": "Ananya Muguli",
 	"name.neeraj": "Dr. Neeraj Sharma",
 	"name.prashant": "Prashant Krishnan",
 	"name.nirmala": "Dr. R Nirmala",
 	"name.raksheet": "Raksheet Bhat",
-	"name.shahbaz": "Shahbaz Sultan",
+	"name.rohit": "Rohit Kumar",
 	"name.shreyas": "Shreyas Ramoji",
 	"name.srikanth": "Srikanth Raj Chetupalli",
 	"place.iisc": "IISc Bangalore",
@@ -52,6 +52,7 @@
 	"team.title.ceo": "CEO",
 	"team.title.ra": "Research Assistant",
 	"team.title.mtech_ai": "MTech(Artificial Intelligence)",
+	"team.title.mtech_sp": "MTech(Signal Processing)",
 	"team.title.post_doc": "Postdoctoral Fellow",
 	"team.title.mo": "Medical Officer",
 	"team.title.sde": "Software Engineer",
@@ -59,12 +60,12 @@
 	"team.areas.sriram": "Speech Recognition, Deep Learning, Neuroscience",
 	"team.areas.pkg": "Speech Production, Articulation, Speech Disorders",
 	"team.areas.anand": "Speech Recognition",
-	"team.areas.anuroop": "",
+	"team.areas.ananya": "Signal Processing",
 	"team.areas.neeraj": "Auditory Neuroscience, Signal Processing",
 	"team.areas.prashant": "Speaker Recognition",
 	"team.areas.nirmala": "",
 	"team.areas.raksheet": "",
-	"team.areas.shahbaz": "",
+	"team.areas.rohit": "Speech Recognition",
 	"team.areas.shreyas": "Speaker Recognition, Machine Learning",
 	"team.areas.srikanth": "Signal Processing, Speech Recognition"
 }
