--- a/src/assets/i18n/hi-IN.json
+++ b/src/assets/i18n/hi-IN.json
@@ -34,12 +34,12 @@
 	"name.sriram": "डॉ श्रीराम गणपति",
 	"name.pkg": "डॉ प्रशांत कुमार घोष",
 	"name.anand": "आनंद मोहन",
-	"name.anuroop": "Anuroop आयंगर",
+	"name.ananya": "अनन्या मुगुली",
 	"name.neeraj": "डॉ नीरज शर्मा",
 	"name.prashant": "प्रशांत कृष्णन",
 	"name.nirmala": "डॉ आर निर्मला",
 	"name.raksheet": "Raksheet भट्ट",
-	"name.shahbaz": "शाहबाज सुल्तान",
+	"name.rohit": "रोहित कुमार",
 	"name.shreyas": "श्रेयस रामोजी",
 	"name.srikanth": "श्रीकांत राज Chetupalli",
 	"place.iisc": "आईआईएससी बैंगलोर",
@@ -51,6 +51,7 @@
 	"team.title.ceo": "सी ई ओ",
 	"team.title.ra": "अनुसंधान सहायक",
 	"team.title.mtech_ai": "एमटेक (आर्टिफिशियल इंटेलिजेंस)",
+	"team.title.mtech_sp": "एमटेक (सिग्नल प्रोसेसिंग)",
 	"team.title.post_doc": "पोस्टडॉक्टोरल सदस्य",
 	"team.title.mo": "चिकित्सा अधिकारी",
 	"team.title.sde": "सॉफ्टवेयर इंजीनियर",
@@ -58,8 +59,10 @@
 	"team.areas.sriram": "वाक् पहचान, दीप लर्निंग, तंत्रिका विज्ञान",
 	"team.areas.pkg": "भाषण उत्पादन, अभिव्यक्ति, भाषण विकारों",
 	"team.areas.anand": "वाक् पहचान",
+	"team.areas.ananya": "सिग्नल प्रोसेसिंग",
 	"team.areas.neeraj": "श्रवण तंत्रिका विज्ञान, सिग्नल प्रोसेसिंग",
 	"team.areas.prashant": "अध्यक्ष मान्यता",
+	"team.areas.rohit": "वाक् पहचान",
 	"team.areas.shreyas": "अध्यक्ष मान्यता, मशीन लर्निंग",
 	"team.areas.srikanth": "सिग्नल प्रोसेसिंग, वाक् पहचान"
 }
