--- a/src/assets/i18n/ka-IN.json
+++ b/src/assets/i18n/ka-IN.json
@@ -34,12 +34,12 @@
     "name.sriram": "ಡಾ ಶ್ರೀರಾಮ್ ಗಣಪತಿ",
     "name.pkg": "ಡಾ Prasanta ಕುಮಾರ್ ಘೋಷ್",
     "name.anand": "ಆನಂದ್ ಮೋಹನ್",
-    "name.anuroop": "Anuroop ಅಯ್ಯಂಗಾರ್",
+    "name.ananya": "ಅನನ್ಯಾ ಮುಗುಲಿ",
     "name.neeraj": "ಡಾ ನೀರಜ್ ಶರ್ಮಾ",
     "name.prashant": "ಪ್ರಶಾಂತ್ ಕೃಷ್ಣನ್",
     "name.nirmala": "ಡಾ ಆರ್ ನಿರ್ಮಲಾ",
     "name.raksheet": "Raksheet ಭಟ್",
-    "name.shahbaz": "ಶಹಬಾಜ್ ಸುಲ್ತಾನ್",
+    "name.rohit": "ರೋಹಿತ್ ಕುಮಾರ್",
     "name.shreyas": "ಶ್ರೇಯಸ್ ರಾಮೋಜಿ",
     "name.srikanth": "ಶ್ರೀಕಾಂತ್ ರಾಜ್ Chetupalli",
     "place.iisc": "ಅಟ್ IISc ಬೆಂಗಳೂರು",
@@ -51,6 +51,7 @@
     "team.title.ceo": "ಸಿಇಒ",
     "team.title.ra": "ಸಂಶೋಧನಾ ಸಹಾಯಕ",
     "team.title.mtech_ai": "MTech (ಕೃತಕ ಬುದ್ಧಿಮತ್ತೆ)",
+    "team.title.mtech_sp": "MTech (ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್)",
     "team.title.post_doc": "ಪೋಸ್ಟ್ಡಾಕ್ಟೊರಲ್ ಫೆಲೋ",
     "team.title.mo": "ವೈದ್ಯಕೀಯ ಅಧಿಕಾರಿ",
     "team.title.sde": "ಸಾಫ್ಟ್ವೇರ್ ಇಂಜಿನಿಯರ್",
@@ -58,8 +59,10 @@
     "team.areas.sriram": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್, ಡೀಪ್ ಕಲಿಕೆ, ನ್ಯೂರೋಸೈನ್ಸ್",
     "team.areas.pkg": "ಸ್ಪೀಚ್ ಪ್ರೊಡಕ್ಷನ್, ಆರ್ಟಿಕ್ಯುಲೇಶನ್, ಸ್ಪೀಚ್ ಡಿಸಾರ್ಡರ್ಸ್",
     "team.areas.anand": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್",
+    "team.areas.ananya": "ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್",
     "team.areas.neeraj": "ಆಡಿಟರಿ ನ್ಯೂರೋಸೈನ್ಸ್, ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್",
     "team.areas.prashant": "ಸ್ಪೀಕರ್ ಗುರುತಿಸುವಿಕೆ",
+    "team.areas.rohit": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್",
     "team.areas.shreyas": "ಸ್ಪೀಕರ್ ಗುರುತಿಸುವಿಕೆ, ಮೆಷೀನ್ ಲರ್ನಿಂಗ್",
     "team.areas.srikanth": "ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್, ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್"
 }
