--- a/src/assets/i18n/ma-IN.json
+++ b/src/assets/i18n/ma-IN.json
@@ -34,12 +34,12 @@
     "name.sriram": "डॉ श्रीराम गणपती",
     "name.pkg": "डॉ प्रशांतचंद्र कुमार घोष",
     "name.anand": "आनंद मोहन",
-    "name.anuroop": "Anuroop अय्यंगार",
+    "name.ananya": "अनन्या मुगुली",
     "name.neeraj": "डॉ नीरज शर्मा",
     "name.prashant": "प्रशांत कृष्णन",
     "name.nirmala": "डॉ आर निर्मला",
     "name.raksheet": "Raksheet भट",
-    "name.shahbaz": "शाहबाझ सुलतान",
+    "name.rohit": "रोहित कुमार",
     "name.shreyas": "श्रेयस Ramoji",
     "name.srikanth": "श्रीकांत राज Chetupalli",
     "place.iisc": "आयआयएससी बंगलोर",
@@ -51,6 +51,7 @@
     "team.title.ceo": "मुख्य कार्यकारी अधिकारी",
     "team.title.ra": "संशोधन सहाय्यक",
     "team.title.mtech_ai": "MTech (कृत्रिम बुद्धिमत्ता)",
+    "team.title.mtech_sp": "MTech (सिग्नल प्रोसेसिंग)",
     "team.title.post_doc": "डॉक्टरेट फेलो",
     "team.title.mo": "वैद्यकीय अधिकारी",
     "team.title.sde": "सोफ्टवेअर अभियंता",
@@ -58,8 +59,10 @@
     "team.areas.sriram": "उच्चार ओळख, दीप शिक्षण, मेंदूचा अभ्यास",
     "team.areas.pkg": "भाषण उत्पादन, उच्चारण, भाषण विकार",
     "team.areas.anand": "उच्चार ओळख",
+    "team.areas.ananya": "सिग्नल प्रोसेसिंग",
     "team.areas.neeraj": "ऑडिटरी मेंदूचा अभ्यास, सिग्नल प्रोसेसिंग",
     "team.areas.prashant": "स्पीकर ओळख",
+    "team.areas.rohit": "उच्चार ओळख",
     "team.areas.shreyas": "स्पीकर ओळख, मशीन शिक्षण",
     "team.areas.srikanth": "सिग्नल प्रोसेसिंग, उच्चार ओळख"
 }
