--- a/src/assets/i18n/ml-IN.json
+++ b/src/assets/i18n/ml-IN.json
@@ -33,12 +33,12 @@
     "name.sriram": "ഡോ ശ്രീറാം ഗണപതി",
     "name.pkg": "ഡോ പ്രശാന്ത കുമാർ ഘോഷ്",
     "name.anand": "ആനന്ദ് മോഹൻ",
-    "name.anuroop": "അനുരൊഒപ് അയ്യങ്കാർ",
+    "name.ananya": "അനന്യ മുഗുലി",
     "name.neeraj": "ഡോ നീരജ് ശർമ",
     "name.prashant": "പ്രശാന്ത് കൃഷ്ണൻ",
     "name.nirmala": "ഡോ ആർ നിർമ്മല",
     "name.raksheet": "രക്ശെഎത് ഭട്ട്",
-    "name.shahbaz": "ഷഹബാസ് സുൽത്താൻ",
+    "name.rohit": "രോഹിത് കുമാർ",
     "name.shreyas": "ശ്രേയസ് റാമോജി",
     "name.srikanth": "ശ്രീകാന്ത് രാജ് ഛെതുപല്ലി",
     "place.iisc": "ഐഐഎസ് ബാംഗ്ലൂർ",
@@ -50,6 +50,7 @@
     "team.title.ceo": "സിഇഒ",
     "team.title.ra": "ഗവേഷണ സഹായി",
     "team.title.mtech_ai": "എം.ടെക് (ആർട്ടിഫിഷ്യൽ ഇന്റലിജൻസ്)",
+    "team.title.mtech_sp": "എം.ടെക് (സിഗ്നൽ പ്രോസസിംഗ്)",
     "team.title.post_doc": "ബിരുദാനന്തര ഫെലോ",
     "team.title.mo": "മെഡിക്കൽ ഓഫീസർ",
     "team.title.sde": "സോഫ്റ്റ്വെയർ എൻജിനീയർ",
@@ -57,7 +58,9 @@
     "team.areas.sriram": "സംഭാഷണം തിരിച്ചറിയൽ, ഡീപ് പഠന, ന്യൂറോസയൻസ്",
     "team.areas.pkg": "സ്പീച്ച് പ്രൊഡക്ഷൻ, അവയില്, സ്പീച്ച് തകരാറുകൾ",
     "team.areas.anand": "സംഭാഷണം തിരിച്ചറിയൽ",
+    "team.areas.ananya": "സിഗ്നൽ പ്രോസസിംഗ്",
     "team.areas.neeraj": "ഓഡിറ്ററി ന്യൂറോസയൻസ്, സിഗ്നൽ പ്രോസസിംഗ്",
     "team.areas.prashant": "സ്പീക്കർ തിരിച്ചറിയൽ",
+    "team.areas.rohit" : "സംഭാഷണം തിരിച്ചറിയൽ",
     "team.areas.shreyas": "സ്പീക്കർ തിരിച്ചറിയൽ, മെഷീൻ ലേണിംഗ്",
     "team.areas.srikanth": "സിഗ്നൽ പ്രോസസിംഗ്, സംഭാഷണം തിരിച്ചറിയൽ"}
