--- a/src/assets/i18n/ta-IN.json
+++ b/src/assets/i18n/ta-IN.json
@@ -34,12 +34,12 @@
     "name.sriram": "டாக்டர் ஸ்ரீராம் கணபதி",
     "name.pkg": "டாக்டர் பிரசாந்தா குமார் கோஷ்",
     "name.anand": "ஆனந்த் மோகன்",
-    "name.anuroop": "Anuroop ஐயங்கார்",
+    "name.ananya": "அனன்யா முகுலி",
     "name.neeraj": "டாக்டர் நீரஜ் சர்மா",
     "name.prashant": "பிரசாந்த் கிருஷ்ணன்",
     "name.nirmala": "டாக்டர் ஆர் நிர்மலா",
     "name.raksheet": "Raksheet பட்",
-    "name.shahbaz": "ஷாபாஸ் சுல்தான்",
+    "name.rohit": "ரோஹித் குமார்",
     "name.shreyas": "ஸ்ரேயஸ் ராமோஜி",
     "name.srikanth": "ஸ்ரீகாந்த் ராஜ் Chetupalli",
     "place.iisc": "ஐஐஎஸ்சி பெங்களூருவில்",
@@ -51,6 +51,7 @@
     "team.title.ceo": "தலைமை நிர்வாக அதிகாரி",
     "team.title.ra": "ஆராய்ச்சி உதவியாளர்",
     "team.title.mtech_ai": "எம்.டெக் (செயற்கை நுண்ணறிவு)",
+    "team.title.mtech_sp": "எம்.டெக் (சிக்னல் ப்ராசசிங்)",
     "team.title.post_doc": "முதுகலை டாக்டர் அவர்",
     "team.title.mo": "மருத்துவ அதிகாரி",
     "team.title.sde": "மென்பொருள் பொறியாளர்",
@@ -58,8 +59,10 @@
     "team.areas.sriram": "பேச்சு அறிதல், டீப் கற்றல், நரம்பியல்",
     "team.areas.pkg": "பேச்சு உற்பத்தி, ஒலிப்பு, பேச்சு சீர்குலைவுகள்",
     "team.areas.anand": "பேச்சு அறிதல்",
+    "team.areas.ananya": "சிக்னல் ப்ராசசிங்",
     "team.areas.neeraj": "ஆடிட்டரி நரம்பியல், சிக்னல் ப்ராசசிங்",
     "team.areas.prashant": "சபாநாயகர் அங்கீகாரம்",
+    "team.areas.rohit": "பேச்சு அறிதல்",
     "team.areas.shreyas": "சபாநாயகர் ரிகாக்னிஷன், மெஷின் லேர்னிங்",
     "team.areas.srikanth": "சிக்னல் ப்ராசசிங், பேச்சு அறிதல்"
 }
