--- a/src/assets/i18n/te-IN.json
+++ b/src/assets/i18n/te-IN.json
@@ -34,12 +34,12 @@
     "name.sriram": "డాక్టర్ శ్రీరామ్ గణపతి",
     "name.pkg": "డాక్టర్ ప్రశాంత కుమార్ ఘోష్",
     "name.anand": "ఆనంద్ మోహన్",
-    "name.anuroop": "అనురూప్ అయ్యంగార్",
+    "name.ananya": "అనన్య ముగులి",
     "name.neeraj": "డాక్టర్ నీరజ్ శర్మ",
     "name.prashant": "ప్రశాంత్ కృష్ణన్",
     "name.nirmala": "డాక్టర్ R. నిర్మలా",
     "name.raksheet": "రక్షీత్ భట్",
-    "name.shahbaz": "షాబాజ్ సుల్తాన్",
+    "name.rohit": "రోహిత్ కుమార్",
     "name.shreyas": "శ్రేయాస్ రామోజీ",
     "name.srikanth": "శ్రీకాంత్ రాజ్ చెటుపల్లి",
     "place.iisc": "భా.వి.సం. బెంగళూరు",
@@ -51,6 +51,7 @@
     "team.title.ceo": "సి.ఈ.ఒ",
     "team.title.ra": "పరిశోధన సహాయకుడు",
     "team.title.mtech_ai": "M. Tech (ఆర్టిఫిషియల్ ఇంటెలిజెన్స్)",
+    "team.title.mtech_sp": "M. Tech (సిగ్నల్ ప్రాసెసింగ్)",
     "team.title.post_doc": "పోస్ట్ డాక్టోరల్ ఫెలో",
     "team.title.mo": "మెడికల్ ఆఫీసర్",
     "team.title.sde": "సాఫ్ట్వేర్ ఇంజనీర్",
@@ -58,8 +59,10 @@
     "team.areas.sriram": "స్పీచ్ రికగ్నిషన్, డీప్ లెర్నింగ్, న్యూరోసైన్స్",
     "team.areas.pkg": "స్పీచ్ ప్రొడక్షన్, ఆర్టిక్యూలేషన్, స్పీచ్ డిజార్డర్స్",
     "team.areas.anand": "స్పీచ్ రికగ్నిషన్",
+    "team.areas.ananya": "సిగ్నల్ ప్రాసెసింగ్",
     "team.areas.neeraj": "ఆడిటరీ న్యూరోసైన్స్, సిగ్నల్ ప్రాసెసింగ్",
     "team.areas.prashant": "స్పీకర్ రికగ్నిషన్",
+    "team.areas.rohit": "స్పీచ్ రికగ్నిషన్",
     "team.areas.shreyas": "స్పీకర్ రికగ్నిషన్, మెషిన్ లెర్నింగ్",
     "team.areas.srikanth": "సిగ్నల్ ప్రాసెసింగ్, స్పీచ్ రికగ్నిషన్"
 }
