--- a/src/assets/i18n/bn-IN.json
+++ b/src/assets/i18n/bn-IN.json
@@ -34,12 +34,12 @@
     "name.sriram": "ডাঃ শ্রীরাম গণপতি",
     "name.pkg": "ডাঃ প্রশান্ত কুমার ঘোষ",
     "name.anand": "আনন্দ মোহন",
-    "name.anuroop": "Anuroop Iyengar",
+    "name.ananya": "অনন্যা মুগুলি",
     "name.neeraj": "ডাঃ নীরজ শর্মা",
     "name.prashant": "প্রশান্ত কৃষ্ণান",
     "name.nirmala": "ডাঃ আর নির্মলা",
     "name.raksheet": "Raksheet ভাট",
-    "name.shahbaz": "শাহবাজ সুলতান",
+    "name.rohit": "রোহিত কুমার",
     "name.shreyas": "Shreyas Ramoji",
     "name.srikanth": "Srikanth রাজ Chetupalli",
     "place.iisc": "IISc বেঙ্গালুরু",
@@ -51,6 +51,7 @@
     "team.title.ceo": "সিইও",
     "team.title.ra": "গবেষণা সহকারী",
     "team.title.mtech_ai": "MTech (কৃত্রিম বুদ্ধিমত্তা)",
+    "team.title.mtech_sp": "MTech (সংকেত প্রক্রিয়াজাতকরণ)",
     "team.title.post_doc": "পোস্ট ডক্টোরাল ফেলো",
     "team.title.mo": "মেডিকেল অফিসার",
     "team.title.sde": "সফটওয়্যার ইঞ্জিনিয়ার",
@@ -58,8 +59,10 @@
     "team.areas.sriram": "ভাষ্য সনাক্তকরণটিতে, ডিপ লার্নিং, স্নায়ুবিজ্ঞান",
     "team.areas.pkg": "স্পিচ উত্পাদনের, স্পষ্ট উচ্চারণ, স্পিচ ডিসঅর্ডারস",
     "team.areas.anand": "কন্ঠ সনান্তকরণ",
+    "team.areas.ananya": "সংকেত প্রক্রিয়াজাতকরণ",
     "team.areas.neeraj": "শ্রাবণ স্নায়ুবিজ্ঞান, সিগন্যাল প্রসেসিং",
     "team.areas.prashant": "স্পিকার স্বীকৃতি",
+    "team.areas.rohit": "কন্ঠ সনান্তকরণ",
     "team.areas.shreyas": "স্পিকার স্বীকৃতি, মেশিন লার্নিং",
     "team.areas.srikanth": "সিগন্যাল প্রসেসিং, কথন শনাক্তকরণ"
 }
